// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toolbar component snaps > should render Toolbar with every widgets 1`] = `
<div
  class="tc-resource-list-toolbar _tc-resource-list-toolbar_e2d895"
>
  <form
    class="_filter_926eb9 tc-resource-list-toolbar-filter _tc-resource-list-toolbar-filter_e2d895 _navbar_926eb9"
    role="search"
  >
    <div
      class="form-group"
    >
      <svg
        aria-hidden="true"
        class="tc-svg-icon tc-icon _svg_bf5f45 _search-icon_926eb9 _search-focused_926eb9 tc-icon-name-talend-search"
        focusable="false"
        name="talend-search"
        pointer-events="none"
        shape-rendering="geometricPrecision"
      />
      <input
        aria-label="Filter"
        autocomplete="off"
        class="_search_926eb9 form-control"
        name="search"
        placeholder="Filter"
        role="searchbox"
        type="search"
        value=""
      />
    </div>
  </form>
  <div
    class="tc-resource-picker-sort-options _tc-resource-picker-sort-options_7b730d"
  >
    <span
      class="_option-label_7b730d"
    >
      Sort:
    </span>
    <button
      aria-describedby="00000000-0000-4000-8000-000000000000"
      aria-label="Sort by name (current order: desc)"
      class="tc-resource-picker-order-chooser _tc-resource-picker-order-chooser_0c35df btn-icon-only btn btn-link"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-talend-sort-az"
        focusable="false"
        name="talend-sort-az"
        pointer-events="none"
        shape-rendering="geometricPrecision"
      />
      <svg
        aria-hidden="true"
        class="tc-svg-icon tc-icon _svg_bf5f45 tc-resource-picker-order-indicator _tc-resource-picker-order-indicator_0c35df tc-icon-name-talend-caret-down"
        focusable="false"
        name="talend-caret-down"
        pointer-events="none"
        shape-rendering="geometricPrecision"
      />
    </button>
    <button
      aria-describedby="00000000-0000-4000-8000-000000000000"
      aria-label="Sort by date (current order: desc)"
      class="tc-resource-picker-order-chooser _tc-resource-picker-order-chooser_0c35df btn-icon-only btn btn-link"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-talend-sort-desc"
        focusable="false"
        name="talend-sort-desc"
        pointer-events="none"
        shape-rendering="geometricPrecision"
      />
      <svg
        aria-hidden="true"
        class="tc-svg-icon tc-icon _svg_bf5f45 tc-resource-picker-order-indicator _tc-resource-picker-order-indicator_0c35df tc-icon-name-talend-caret-down"
        focusable="false"
        name="talend-caret-down"
        pointer-events="none"
        shape-rendering="geometricPrecision"
      />
    </button>
  </div>
  <div
    class="tc-resource-picker-state-filters _tc-resource-picker-state-filters_56eaf3"
  >
    <span
      class="_option-label_56eaf3"
    >
      Filter:
    </span>
    <button
      aria-describedby="00000000-0000-4000-8000-000000000000"
      aria-label="Selected"
      aria-pressed="false"
      class="_tc-resource-picker-selection-filter_56eaf3 tc-icon-toggle _tc-icon-toggle_6faee3 btn btn-link"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-talend-check-circle"
        focusable="false"
        name="talend-check-circle"
        pointer-events="none"
        shape-rendering="geometricPrecision"
      />
    </button>
    <button
      aria-describedby="00000000-0000-4000-8000-000000000000"
      aria-label="Certified"
      aria-pressed="false"
      class="_tc-resource-picker-certified-filter_56eaf3 tc-icon-toggle _tc-icon-toggle_6faee3 btn btn-link"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-talend-badge"
        focusable="false"
        name="talend-badge"
        pointer-events="none"
        shape-rendering="geometricPrecision"
      />
    </button>
    <button
      aria-describedby="00000000-0000-4000-8000-000000000000"
      aria-label="Favorites"
      aria-pressed="false"
      class="_tc-resource-picker-favorite-filter_56eaf3 tc-icon-toggle _tc-icon-toggle_6faee3 btn btn-link"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-talend-star"
        focusable="false"
        name="talend-star"
        pointer-events="none"
        shape-rendering="geometricPrecision"
      />
    </button>
  </div>
</div>
`;

exports[`Toolbar component snaps should render Toolbar with every widgets 1`] = `
<div
  class="tc-resource-list-toolbar theme-tc-resource-list-toolbar"
>
  <form
    class="theme-filter tc-resource-list-toolbar-filter theme-tc-resource-list-toolbar-filter theme-navbar"
    role="search"
  >
    <div
      class="form-group"
    >
      <span
        class="CoralIcon theme-search-icon theme-search-focused"
        name="talend-search"
      />
      <input
        aria-label="Filter"
        autocomplete="off"
        class="theme-search form-control"
        name="search"
        placeholder="Filter"
        role="searchbox"
        type="search"
        value=""
      />
    </div>
  </form>
  <div
    class="tc-resource-picker-sort-options theme-tc-resource-picker-sort-options"
  >
    <span
      class="theme-option-label"
    >
      Sort:
    </span>
    <button
      aria-describedby="42"
      aria-label="Sort by name (current order: desc)"
      class="tc-resource-picker-order-chooser theme-tc-resource-picker-order-chooser btn-icon-only btn btn-link"
      type="button"
    >
      <span
        class="CoralIcon"
        name="talend-sort-az"
      />
      <span
        class="CoralIcon tc-resource-picker-order-indicator theme-tc-resource-picker-order-indicator"
        name="talend-caret-down"
      />
    </button>
    <button
      aria-describedby="42"
      aria-label="Sort by date (current order: desc)"
      class="tc-resource-picker-order-chooser theme-tc-resource-picker-order-chooser btn-icon-only btn btn-link"
      type="button"
    >
      <span
        class="CoralIcon"
        name="talend-sort-desc"
      />
      <span
        class="CoralIcon tc-resource-picker-order-indicator theme-tc-resource-picker-order-indicator"
        name="talend-caret-down"
      />
    </button>
  </div>
  <div
    class="tc-resource-picker-state-filters theme-tc-resource-picker-state-filters"
  >
    <span
      class="theme-option-label"
    >
      Filter:
    </span>
    <button
      aria-describedby="42"
      aria-label="Selected"
      aria-pressed="false"
      class="theme-tc-resource-picker-selection-filter tc-icon-toggle theme-tc-icon-toggle btn btn-link"
      type="button"
    >
      <span
        class="CoralIcon"
        name="talend-check-circle"
      />
    </button>
    <button
      aria-describedby="42"
      aria-label="Certified"
      aria-pressed="false"
      class="theme-tc-resource-picker-certified-filter tc-icon-toggle theme-tc-icon-toggle btn btn-link"
      type="button"
    >
      <span
        class="CoralIcon"
        name="talend-badge"
      />
    </button>
    <button
      aria-describedby="42"
      aria-label="Favorites"
      aria-pressed="false"
      class="theme-tc-resource-picker-favorite-filter tc-icon-toggle theme-tc-icon-toggle btn btn-link"
      type="button"
    >
      <span
        class="CoralIcon"
        name="talend-star"
      />
    </button>
  </div>
</div>
`;
